--- a/backend-example/package.json
+++ b/backend-example/package.json
@@ -13,8 +13,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^17.7.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
+    "schema-inspector": "^2.0.2",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
