--- a/backend-example/package.json
+++ b/backend-example/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "schema-inspector": "^2.0.2",
